crates/pixi_build_nodejs/src/snapshots/pixi_build_nodejs__build_script__tests__nextjs_standalone@bash.snap
---
source: crates/pixi_build_nodejs/src/build_script.rs
expression: script
---
cd "/src/my-app"

# Step 1: Install dependencies
npm install

# Step 2: Build
if node -e "const p=require('./package.json');process.exit(p.scripts&&p.scripts.build?0:1)" 2>/dev/null; then
  npm run build
fi

# Step 3: Install files to $PREFIX/share/$PKG_NAME
INSTALL_DEST="$PREFIX/share/$PKG_NAME"
mkdir -p "$INSTALL_DEST"
# Copy build output directory to install destination
cp -r "/src/my-app/.next/standalone/." "$INSTALL_DEST/"
# Copy extra asset: .next/static -> .next/static
mkdir -p "$INSTALL_DEST/.next/static"
cp -r "/src/my-app/.next/static/." "$INSTALL_DEST/.next/static/"
# Copy extra asset: public -> public
mkdir -p "$INSTALL_DEST/public"
cp -r "/src/my-app/public/." "$INSTALL_DEST/public/"

# Step 4: Create launchers in $PREFIX/bin
mkdir -p "$PREFIX/bin"
# Create a self-relocating server launcher at $PREFIX/bin/$PKG_NAME
cat > "$PREFIX/bin/$PKG_NAME" << SERVER_LAUNCHER_EOF
#!/usr/bin/env sh
_prefix="\$(cd "\$(dirname "\$0")/.." && pwd)"
exec node "\${_prefix}/share/$PKG_NAME/server.js" "\$@"
SERVER_LAUNCHER_EOF
chmod +x "$PREFIX/bin/$PKG_NAME"
